  add freopen64
  add wcsnlen
  various printf fixes (Gabriel Ravier)
  add close_range (Guilherme Janczak)
  add execveat and fexecve
  add j, z and t in scanf (Gabriel Ravier)
  fix %p in scanf for 64-bit platforms (Gabriel Ravier)
  set errno to ENOMEM in printf when abortint due to too large formatting request (Gabriel Ravier)
  fix wcsncmp (behaved like memcmp not strcmp) (Gabriel Ravier)

0.34:
  move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
  add linux/seccomp.h linux/prctl.h linux/audit.h linux/elf-em.h linux/filter.h
  SECURITY: make sure all assembler files mark the stack non-executable so
    the kernel can map the stack of the whole program as non-executable
  support compiling with clang (no cross compiling yet, and the resulting
    binary code is significantly larger than with gcc)
  implement experimental C11 threads
  fix fgets (Andreas Förster)
  add eventfd, inotify_init1, epoll_init1, accept4, recvmmsg, sendmmsg
  add dup3, fanotify_init, fanotify_mark, signalfd4, timerfd_settime
  add timerfd_gettime, setns, memfd_create, getrandom, syncfs
  add preadv, pwritev
  add getcontext, setcontext, makecontext, swapcontext (i386 and x86_64 only for now)
  add implementation of hsearch and friends
  add strverscmp (like GNU version but without special treatment for leading zeros)
  fix cuserid
  SECURITY: fix integer overflow in scandir/scandir64 if your selector
    leaves more than 1 billion filenames
  fix memory leaks in out of memory error paths in regcomp and librpc
    udp and tcp server code (found by the llvm static analyzer)
  fix returning more than one match in regexec (Stefan Wagner)
  add getentropy, lazy arc4random clone (OpenBSD)
  define uintptr_t using __UINTPTR_TYPE__ (32-bit platforms may need a make clean)
  move strnlen from libcompat into libc (it's POSIX now)
  fix dn_expand argument signedness
  add explicit_bzero, timingsafe_bcmp and timingsafe_memcmp (OpenBSD APIs useful for crypto)